SDKs/twilio.com/twilio_sync_v1/1.37.4/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateDocumentRequest, CreateDocumentResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateDocumentRequest = {
  security: {
    accountSidAuthToken: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  },
  pathParams: {
    serviceSid: "sit",
  },
  request: {
    data: "voluptas",
    ttl: 6050128673802995827,
    uniqueName: "expedita",
  },
};

sdk.createDocument(req).then((res: CreateDocumentResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createDocument`
* `createService`
* `createStreamMessage` - Create a new Stream Message.
* `createSyncList`
* `createSyncListItem`
* `createSyncMap`
* `createSyncMapItem`
* `createSyncStream` - Create a new Stream.
* `deleteDocument`
* `deleteDocumentPermission` - Delete a specific Sync Document Permission.
* `deleteService`
* `deleteSyncList`
* `deleteSyncListItem`
* `deleteSyncListPermission` - Delete a specific Sync List Permission.
* `deleteSyncMap`
* `deleteSyncMapItem`
* `deleteSyncMapPermission` - Delete a specific Sync Map Permission.
* `deleteSyncStream` - Delete a specific Stream.
* `fetchDocument`
* `fetchDocumentPermission` - Fetch a specific Sync Document Permission.
* `fetchService`
* `fetchSyncList`
* `fetchSyncListItem`
* `fetchSyncListPermission` - Fetch a specific Sync List Permission.
* `fetchSyncMap`
* `fetchSyncMapItem`
* `fetchSyncMapPermission` - Fetch a specific Sync Map Permission.
* `fetchSyncStream` - Fetch a specific Stream.
* `listDocument`
* `listDocumentPermission` - Retrieve a list of all Permissions applying to a Sync Document.
* `listService`
* `listSyncList`
* `listSyncListItem`
* `listSyncListPermission` - Retrieve a list of all Permissions applying to a Sync List.
* `listSyncMap`
* `listSyncMapItem`
* `listSyncMapPermission` - Retrieve a list of all Permissions applying to a Sync Map.
* `listSyncStream` - Retrieve a list of all Streams in a Service Instance.
* `updateDocument`
* `updateDocumentPermission` - Update an identity's access to a specific Sync Document.
* `updateService`
* `updateSyncList`
* `updateSyncListItem`
* `updateSyncListPermission` - Update an identity's access to a specific Sync List.
* `updateSyncMap`
* `updateSyncMapItem`
* `updateSyncMapPermission` - Update an identity's access to a specific Sync Map.
* `updateSyncStream` - Update a specific Stream.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
